# iron-pipeline

./: .gitignore  Cargo.toml  README.md  index.html  search-index.js  update_and_publish_docs.ps1
examples/: complex.rs  simple.rs.bk
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/iron/middleware/: trait.Handler.js
implementors/iron_pipeline/: trait.PipelineMiddleware.js
implementors/iron_pipeline/middleware/fork/: trait.ForkPredicate.js
implementors/std/error/: trait.Error.js
implementors/typemap/: trait.Key.js
iron_pipeline/: PipelineMiddleware.t.html  PipelineNext.t.html  enum.Error.html  index.html  sidebar-items.js  struct.Pipeline.html  struct.PipelineNext.html  trait.Middleware.html  trait.PipelineMiddleware.html
iron_pipeline/middleware/: index.html  sidebar-items.js
iron_pipeline/middleware/fork/: Fork.t.html  OriginalUrl.t.html  index.html  sidebar-items.js  struct.Fork.html  struct.ForkOnFn.html  struct.ForkOnPath.html  struct.OriginalUrl.html  trait.ForkPredicate.html
iron_pipeline/middleware/handle/: HandleNext.t.html  index.html  sidebar-items.js  struct.Handle.html  struct.HandleNext.html
iron_pipeline/prelude/: index.html
src/: lib.rs  lib.rs.bk  middleware.rs  processors.rs
src/iron_pipeline/src/: lib.rs.html
src/iron_pipeline/src/middleware/: fork.rs.html  handle.rs.html  mod.rs.html
src/middleware/: fork.rs  fork.rs.bk  handle.rs  handle.rs.bk  mod.rs  mod.rs.bk  process.rs
tests/: fork.rs  handle.rs  process.rs
