[package]
name = "iron-pipeline"
version = "0.1.0"
authors = ["Benjamin Fox <deadalus.ai@gmail.com>"]
description = "Simple pipelined request handler for the Iron framework"
repository = "https://github.com/deadalusai/iron-pipeline"
license = "MIT"

[dependencies]
iron = "0.3.0"
url = "1.1.1"

[dev-dependencies]
iron-test = { git = "https://github.com/deadalusai/iron-test", default-features = false }